# GeoDFN

./: .gitignore  Apodi-StatisticalAnalysis.ipynb  LICENSE  README.md  app.py  geodfn.spec  launcher.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
Datasets/Brazil/: Apodi.txt
GeoDFN/: Example-BrazilAperture.py  Example-BrazilFixedSeeds.py  Example-BrazilFixedSeedsAndExclusion.py  Example-BrazilRandomSeeds.py  __init__.py
GeoDFN/Classes/: DFNGenerator.py  DFNGeneratorWithSeed.py  DFNGeneratorWithSeedAndExclusion.py  __init__.py  _validation.py  apertureCalculator.py  bufferZoneCalculator.py  fractureLengthPDFs.py  orienetationPDFs.py  orientationPDFs.py  spatialDistributionPDFs.py  spatialDisturbutionPDFs.py
GeoDFN/package/: Main.py
GeoDFN/package/DFNGenerator/: DFNGenerator.py  apertureCalculator.py  bufferZoneCalculator.py  fractureLengthPDFs.py  orienetationPDFs.py  spatialDisturbutionPDFs.py
tests/: test_generators.py
