[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "GeoDFN"
version = "0.1.0"
description = "Discrete Fracture Network (DFN) generator for geological and hydrogeological simulations"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "numba",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]
gui = [
    "streamlit>=1.32",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["GeoDFN*"]
