[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GeoDFN"
version = "2.0.0"
description = "Geologically consistent Discrete Fracture Network generator"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "numpy==2.4.6",
    "scipy==1.17.1",
    "matplotlib==3.10.9",
    "streamlit==1.58.0",
    "Pillow==12.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/kamelelahe/GeoDFN"
Publication = "https://doi.org/10.1144/geoenergy2025-028"

[tool.setuptools.packages.find]
where = ["."]
include = ["GeoDFN*"]
